# wadamesh

./: NOTICE  README.md  WADAMESH_SPLIT_PLAN.md  merge-bin.py  platformio.ini
.github/workflows/: c-cpp.yml  release.yml
boards/: thinknode_m9.json
deploy/: README.md  meshamerica-catalog.json
deploy/flasher/: index.html
deploy/nginx/: firmware.wadamesh.com.conf  flasher.wadamesh.com.conf
deploy/site/: docs.html  index.html
include/: lv_conf.h
release-notes/: beta_12.txt  beta_21.txt  beta_24.txt  beta_27.txt  beta_35.txt  beta_36.txt  beta_38.txt  beta_40.txt  beta_42.txt
scripts/: cut-core-tag.sh  release.sh  tanmatsu-appstore-publish.sh
src/: AbstractUITask.h  DataStore.cpp  DataStore.h  MyMesh.cpp  MyMesh.h  main.cpp  usb_unused_class_stubs.c
src/event/: Event.h  EventBus.cpp  EventBus.h
src/helpers/esp32/: SdNvsPrefs.cpp  SdNvsPrefs.h  TouchPrefsStore.cpp  TouchPrefsStore.h  WebMirror.h  WebSocketCompanionServer.cpp
src/helpers/input/: TDeckKeyboard.cpp  TDeckKeyboard.h  TDeckTouch.cpp
src/installer/: PackageInstaller.cpp  PackageInstaller.h  PackageVerifier.cpp  PackageVerifier.h  PackagesTypes.h
src/ui-touch/: KeyboardLayouts.cpp  KeyboardLayouts.h  SnakeGame.cpp  SnakeGame.h  UITask.cpp  UITask.h  device_caps.h  emoji_data.c  emoji_data.h  extras_font_12.c  extras_font_14.c  extras_font_16.c  extras_lat_20.c  extras_lat_24.c  extras_lat_28.c  i18n.cpp  i18n.h  qr_icon.h
tanmatsu/: build.sh
tanmatsu/main/: CMakeLists.txt
tanmatsu/sdkconfigs/: wadamesh
variants/thinknode_m9/: M9Board.cpp  M9Board.h  M9Keyboard.cpp  M9Keyboard.h  M9_PORT.md  partitions_m9_touch.csv  target.cpp  target.h
